--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: java
 
+cache: 
+    directories:
+        - "$HOME/.m2/repository"
+
 script: 
     - mvn dependency:go-offline
     - mvn clean verify
