--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,15 @@ cache:
     directories:
         - "$HOME/.m2/repository"
 
+services: 
+    - docker
+
 script: 
     - mvn clean verify
-    - docker login kyalarys -p $DOCKER_HUB_SECRET
-    - docker build -t kyalarys/sample-api
-    - docker push kyalarys/sample-api
+    
+    - docker build -t kyalarys/sample-cpe:api sample-application-http-api-server
+    - docker build -t kyalarys/sample-cpe:db sample-application-db-changelog-job
+
+    - docker login -u kyalarys -p $DOCKER_HUB_SECRET
+    - docker push kyalarys/sample-cpe:api
+    - docker push kyalarys/sample-cpe:db
