--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,14 @@ cache:
 services: 
     - docker
 
+addons:
+    sonarcloud:
+        organization: "$SONARCLOUD_ORGANIZATION" # the key of the org you chose at step #3
+        token:
+            secure: "$SONARCLOUD_TOKEN" # encrypted value of your token
+
 script: 
-    - mvn clean verify
+    - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.projectKey="$SONARCLOUD_PROJECT_KEY"
     
     - docker build -t "$DOCKER_USERNAME"/sample-cpe:api sample-application-http-api-server
     - docker build -t "$DOCKER_USERNAME"/sample-cpe:db sample-application-db-changelog-job
