--- a/.travis.yml
+++ b/.travis.yml
@@ -4,21 +4,33 @@ cache:
     directories:
         - "$HOME/.m2/repository"
 
-services: 
-    - docker
+jobs:
+    include: 
+        
+        - stage: test
+        addons:
+            sonarcloud:
+                organization: "$SONARCLOUD_ORGANIZATION" # the key of the org you chose at step #3
+                token:
+                    secure: "$SONARCLOUD_TOKEN" # encrypted value of your token
 
-addons:
-    sonarcloud:
-        organization: "$SONARCLOUD_ORGANIZATION" # the key of the org you chose at step #3
-        token:
-            secure: "$SONARCLOUD_TOKEN" # encrypted value of your token
+        script: 
+            # Test 
+            - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.projectKey="$SONARCLOUD_PROJECT_KEY"
+        
+        - stage: build
+        services: 
+            - docker
 
-script: 
-    - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.projectKey="$SONARCLOUD_PROJECT_KEY"
-    
-    - docker build -t "$DOCKER_USERNAME"/sample-cpe:api sample-application-http-api-server
-    - docker build -t "$DOCKER_USERNAME"/sample-cpe:db sample-application-db-changelog-job
+        script:     
+            # Build Java
+            - mvn package -DskipTests
 
-    - docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD"
-    - docker push "$DOCKER_USERNAME"/sample-cpe:api
-    - docker push "$DOCKER_USERNAME"/sample-cpe:db
+            # Build Docker
+            - docker build -t "$DOCKER_USERNAME"/sample-cpe:api sample-application-http-api-server
+            - docker build -t "$DOCKER_USERNAME"/sample-cpe:db sample-application-db-changelog-job
+        
+            # Publish
+            - docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD"
+            - docker push "$DOCKER_USERNAME"/sample-cpe:api
+            - docker push "$DOCKER_USERNAME"/sample-cpe:db
